# crypto-agent-forecaster

./: .env.example  .gitignore  README.md  debug_chart_generation.py  debug_timestamps.py  main.py  pyproject.toml
.cursor/: plan.md
src/crypto_agent_forecaster/: __init__.py  config.py  llm_factory.py  utils.py
src/crypto_agent_forecaster/agents/: __init__.py  crew_manager.py  forecasting_agent.py  market_data_agent.py  sentiment_agent.py  technical_agent.py
src/crypto_agent_forecaster/prompts/: __init__.py  fusion_prompts.py  sentiment_prompts.py  technical_prompts.py
src/crypto_agent_forecaster/tools/: __init__.py  chart_analysis_tool.py  coingecko_tool.py  fourchan_tool.py  technical_analysis_tool.py
validation/: OVERVIEW.md  README.md  __init__.py  analytics.py  cli.py  example_usage.py  help.sh  monitor.sh  pyproject.toml  run_background.sh  setup.sh  validator.py  vps_deployment.py
