[project]
name = "crypto-agent-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.121.1",
    "google-generativeai>=0.8.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ta>=0.11.0",
    "typer>=0.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",
    "mplfinance>=0.12.10b0",
]
