[project]
name = "crypto-agent-forecaster-validation"
version = "0.1.0"
description = "Comprehensive validation toolkit for crypto forecasting AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core validation framework dependencies
    "pandas>=2.2.3",
    "numpy>=2.2.6",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Data analysis and statistics
    "scipy>=1.11.0",
    "plotly>=5.17.0",
    
    # System monitoring and scheduling
    "psutil>=5.9.0",
    "schedule>=1.2.0",
    
    # CLI and progress display
    "typer>=0.16.0",
    "rich>=13.9.4",
    
    # Date/time handling
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
crypto-validator = "validation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607", "PLR0913", "PLR0915", "COM812", "ISC001"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 